--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Home.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Home.adoc
@@ -29,7 +29,7 @@ For more information about the domains, consult <<Domains#>>
 
 The <<CPS-to-Deployment-Transformation#,CPS-to-Deployment>> model-to-model transformation derives a deployment model from a CPS model and also creates the correspondence in a traceability model. In addition, model-to-model transformations should be able **synchronize changes** in the CPS model to the deployment model and the traceability model. <<Alternative-transformation-methods#,Alternative transformation methods>> can be implemented, with some variant offering only **batch execution** functionalities (recreating the deployment and traceability models every time), while other alternatives are capable of **incremental execution**, where only changes are propagated.
 
-The transformation creates deployment hosts for each CPS host instance, then creates deployment applications in these hosts for all application instances allocated to the corresponding CPS host. Next, the state machine of the application type for each mapped application instance is mapped to a deployment behaviour of the deployment application. This includes creating states and transitions as well, although the two metamodels represent state machines an behaviours in a slightly different way. Finally, transition actions are processed and trigger references are created between behaviour transitions if the model structure and the actions are set up in a given way (<<CPS-to-Deployment-Transformation#rules,Step 6. in the specification>>).
+The transformation creates deployment hosts for each CPS host instance, then creates deployment applications in these hosts for all application instances allocated to the corresponding CPS host. Next, the state machine of the application type for each mapped application instance is mapped to a deployment behaviour of the deployment application. This includes creating states and transitions as well, although the two metamodels represent state machines and behaviours in a slightly different way. Finally, transition actions are processed and trigger references are created between behaviour transitions if the model structure and the actions are set up in a given way (<<CPS-to-Deployment-Transformation#rules,Step 6. in the specification>>).
 
 
 === Deployment Code Generation
